# serializer version: 1
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.1
  '''
  SELECT "clairview_scheduledchange"."id",
         "clairview_scheduledchange"."record_id",
         "clairview_scheduledchange"."model_name",
         "clairview_scheduledchange"."payload",
         "clairview_scheduledchange"."scheduled_at",
         "clairview_scheduledchange"."executed_at",
         "clairview_scheduledchange"."failure_reason",
         "clairview_scheduledchange"."team_id",
         "clairview_scheduledchange"."created_at",
         "clairview_scheduledchange"."created_by_id",
         "clairview_scheduledchange"."updated_at"
  FROM "clairview_scheduledchange"
  WHERE ("clairview_scheduledchange"."executed_at" IS NULL
         AND "clairview_scheduledchange"."scheduled_at" <= '2023-12-21 09:00:00+00:00'::timestamptz)
  ORDER BY "clairview_scheduledchange"."scheduled_at" ASC
  LIMIT 10000
  FOR
  UPDATE NOWAIT
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.10
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.11
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.12
  '''
  SELECT "clairview_scheduledchange"."id",
         "clairview_scheduledchange"."record_id",
         "clairview_scheduledchange"."model_name",
         "clairview_scheduledchange"."payload",
         "clairview_scheduledchange"."scheduled_at",
         "clairview_scheduledchange"."executed_at",
         "clairview_scheduledchange"."failure_reason",
         "clairview_scheduledchange"."team_id",
         "clairview_scheduledchange"."created_at",
         "clairview_scheduledchange"."created_by_id",
         "clairview_scheduledchange"."updated_at"
  FROM "clairview_scheduledchange"
  WHERE "clairview_scheduledchange"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.13
  '''
  SELECT "clairview_scheduledchange"."id",
         "clairview_scheduledchange"."record_id",
         "clairview_scheduledchange"."model_name",
         "clairview_scheduledchange"."payload",
         "clairview_scheduledchange"."scheduled_at",
         "clairview_scheduledchange"."executed_at",
         "clairview_scheduledchange"."failure_reason",
         "clairview_scheduledchange"."team_id",
         "clairview_scheduledchange"."created_at",
         "clairview_scheduledchange"."created_by_id",
         "clairview_scheduledchange"."updated_at"
  FROM "clairview_scheduledchange"
  WHERE "clairview_scheduledchange"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.14
  '''
  SELECT "clairview_scheduledchange"."id",
         "clairview_scheduledchange"."record_id",
         "clairview_scheduledchange"."model_name",
         "clairview_scheduledchange"."payload",
         "clairview_scheduledchange"."scheduled_at",
         "clairview_scheduledchange"."executed_at",
         "clairview_scheduledchange"."failure_reason",
         "clairview_scheduledchange"."team_id",
         "clairview_scheduledchange"."created_at",
         "clairview_scheduledchange"."created_by_id",
         "clairview_scheduledchange"."updated_at"
  FROM "clairview_scheduledchange"
  WHERE "clairview_scheduledchange"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.15
  '''
  SELECT "clairview_scheduledchange"."id",
         "clairview_scheduledchange"."record_id",
         "clairview_scheduledchange"."model_name",
         "clairview_scheduledchange"."payload",
         "clairview_scheduledchange"."scheduled_at",
         "clairview_scheduledchange"."executed_at",
         "clairview_scheduledchange"."failure_reason",
         "clairview_scheduledchange"."team_id",
         "clairview_scheduledchange"."created_at",
         "clairview_scheduledchange"."created_by_id",
         "clairview_scheduledchange"."updated_at"
  FROM "clairview_scheduledchange"
  WHERE "clairview_scheduledchange"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.16
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE "clairview_featureflag"."key" = 'flag-1'
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.2
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE "clairview_featureflag"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.3
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.4
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.5
  '''
  SELECT "clairview_organization"."id",
         "clairview_organization"."name",
         "clairview_organization"."slug",
         "clairview_organization"."logo_media_id",
         "clairview_organization"."created_at",
         "clairview_organization"."updated_at",
         "clairview_organization"."plugins_access_level",
         "clairview_organization"."for_internal_metrics",
         "clairview_organization"."is_member_join_email_enabled",
         "clairview_organization"."enforce_2fa",
         "clairview_organization"."is_hipaa",
         "clairview_organization"."customer_id",
         "clairview_organization"."available_product_features",
         "clairview_organization"."usage",
         "clairview_organization"."never_drop_data",
         "clairview_organization"."customer_trust_scores",
         "clairview_organization"."setup_section_2_completed",
         "clairview_organization"."personalization",
         "clairview_organization"."domain_whitelist"
  FROM "clairview_organization"
  WHERE "clairview_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.6
  '''
  SELECT "clairview_team"."id",
         "clairview_team"."uuid",
         "clairview_team"."organization_id",
         "clairview_team"."project_id",
         "clairview_team"."api_token",
         "clairview_team"."app_urls",
         "clairview_team"."name",
         "clairview_team"."slack_incoming_webhook",
         "clairview_team"."created_at",
         "clairview_team"."updated_at",
         "clairview_team"."anonymize_ips",
         "clairview_team"."completed_snippet_onboarding",
         "clairview_team"."has_completed_onboarding_for",
         "clairview_team"."ingested_event",
         "clairview_team"."autocapture_opt_out",
         "clairview_team"."autocapture_web_vitals_opt_in",
         "clairview_team"."autocapture_web_vitals_allowed_metrics",
         "clairview_team"."autocapture_exceptions_opt_in",
         "clairview_team"."autocapture_exceptions_errors_to_ignore",
         "clairview_team"."session_recording_opt_in",
         "clairview_team"."session_recording_sample_rate",
         "clairview_team"."session_recording_minimum_duration_milliseconds",
         "clairview_team"."session_recording_linked_flag",
         "clairview_team"."session_recording_network_payload_capture_config",
         "clairview_team"."session_replay_config",
         "clairview_team"."capture_console_log_opt_in",
         "clairview_team"."capture_performance_opt_in",
         "clairview_team"."surveys_opt_in",
         "clairview_team"."heatmaps_opt_in",
         "clairview_team"."session_recording_version",
         "clairview_team"."signup_token",
         "clairview_team"."is_demo",
         "clairview_team"."access_control",
         "clairview_team"."week_start_day",
         "clairview_team"."inject_web_apps",
         "clairview_team"."test_account_filters",
         "clairview_team"."test_account_filters_default_checked",
         "clairview_team"."path_cleaning_filters",
         "clairview_team"."timezone",
         "clairview_team"."data_attributes",
         "clairview_team"."person_display_name_properties",
         "clairview_team"."live_events_columns",
         "clairview_team"."recording_domains",
         "clairview_team"."primary_dashboard_id",
         "clairview_team"."extra_settings",
         "clairview_team"."modifiers",
         "clairview_team"."correlation_config",
         "clairview_team"."session_recording_retention_period_days",
         "clairview_team"."plugins_opt_in",
         "clairview_team"."opt_out_capture",
         "clairview_team"."event_names",
         "clairview_team"."event_names_with_usage",
         "clairview_team"."event_properties",
         "clairview_team"."event_properties_with_usage",
         "clairview_team"."event_properties_numerical",
         "clairview_team"."external_data_workspace_id",
         "clairview_team"."external_data_workspace_last_synced_at"
  FROM "clairview_team"
  WHERE "clairview_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.7
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE "clairview_featureflag"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.8
  '''
  SELECT "clairview_user"."id",
         "clairview_user"."password",
         "clairview_user"."last_login",
         "clairview_user"."first_name",
         "clairview_user"."last_name",
         "clairview_user"."is_staff",
         "clairview_user"."is_active",
         "clairview_user"."date_joined",
         "clairview_user"."uuid",
         "clairview_user"."current_organization_id",
         "clairview_user"."current_team_id",
         "clairview_user"."email",
         "clairview_user"."pending_email",
         "clairview_user"."temporary_token",
         "clairview_user"."distinct_id",
         "clairview_user"."is_email_verified",
         "clairview_user"."requested_password_reset_at",
         "clairview_user"."has_seen_product_intro_for",
         "clairview_user"."strapi_id",
         "clairview_user"."theme_mode",
         "clairview_user"."partial_notification_settings",
         "clairview_user"."anonymize_data",
         "clairview_user"."toolbar_mode",
         "clairview_user"."hedgehog_config",
         "clairview_user"."events_column_config",
         "clairview_user"."email_opt_in"
  FROM "clairview_user"
  WHERE "clairview_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.9
  '''
  SELECT "clairview_featureflag"."id",
         "clairview_featureflag"."key",
         "clairview_featureflag"."name",
         "clairview_featureflag"."filters",
         "clairview_featureflag"."rollout_percentage",
         "clairview_featureflag"."team_id",
         "clairview_featureflag"."created_by_id",
         "clairview_featureflag"."created_at",
         "clairview_featureflag"."deleted",
         "clairview_featureflag"."active",
         "clairview_featureflag"."rollback_conditions",
         "clairview_featureflag"."performed_rollback",
         "clairview_featureflag"."ensure_experience_continuity",
         "clairview_featureflag"."usage_dashboard_id",
         "clairview_featureflag"."has_enriched_analytics"
  FROM "clairview_featureflag"
  WHERE ("clairview_featureflag"."active"
         AND NOT "clairview_featureflag"."deleted"
         AND "clairview_featureflag"."team_id" = 2)
  '''
# ---
